// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertSnackbar does not render when no alerts 1`] = `<div />`;

exports[`AlertSnackbar renders alerts both map alerts and  app-service-alerts 1`] = `
<div>
  <div
    class="mockAlertStack"
  >
    <div
      class="mockAlertBar"
      critical="critical"
      duration="6000"
    >
      A critical error from app-service-alerts
    </div>
    <div
      class="mockAlertBar"
      duration="6000"
      warning="warning"
    >
      Another problem with facility layer
    </div>
  </div>
</div>
`;

exports[`AlertSnackbar renders alerts from app-service-alerts 1`] = `
<div>
  <div
    class="mockAlertStack"
  >
    <div
      class="mockAlertBar"
      duration="6000"
      success="success"
    >
      A successful result app-service-alerts
    </div>
  </div>
</div>
`;

exports[`AlertSnackbar renders map alerts 1`] = `
<div>
  <div
    class="mockAlertStack"
  >
    <div
      class="mockAlertBar"
      duration="6000"
      warning="warning"
    >
      A warning from the mapviews
    </div>
  </div>
</div>
`;
